--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "squidGame",
+  "name": "kaki-mono",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -34,12 +34,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@chainlink/contracts": "0.1.7",
+    "@chainlink/contracts": "^0.2.2",
     "@ethersproject/bignumber": "^5.4.1",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^3.4.1",
-    "@openzeppelin/contracts-upgradeable": "^3.4.1",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@openzeppelin/test-helpers": "^0.5.15",
     "@typechain/ethers-v5": "^7.1.2",
@@ -78,5 +76,10 @@
     "tsconfig-paths": "^3.11.0",
     "typechain": "^5.1.2",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.4.0",
+    "@openzeppelin/contracts-upgradeable": "^4.4.0",
+    "abdk-libraries-solidity": "^3.0.0"
   }
 }
