--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fork:dev": "node ./_scripts.js fork:dev",
     "fork:node": "node ./_scripts.js fork:node",
     "fork:test": "node ./_scripts.js fork:test",
+    "node": "hardhat node --network hardhat",
     "hr": "hardhat --network mainnet run",
     "ht": "hardhat --network bsctest run"
   },
