deploy all bsc prod

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "fork:node": "node ./_scripts.js fork:node",
     "fork:test": "node ./_scripts.js fork:test",
     "node": "hardhat node --network hardhat",
-    "hr": "hardhat --network mainnet run",
+    "hr": "hardhat --network bsc run",
     "ht": "hardhat --network bsctest run"
   },
   "keywords": [],
