add harmony network

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "fork:test": "node ./_scripts.js fork:test",
     "node": "hardhat node --network hardhat",
     "hr": "hardhat --network bsc run",
-    "ht": "hardhat --network bsctest run"
+    "ht": "hardhat --network bsctest run",
+    "hhm": "hardhat --network harmony run"
   },
   "keywords": [],
   "author": "",
